--- a/clase1/index.html
+++ b/clase1/index.html
@@ -7,6 +7,51 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <p>League of Legends</p>
+    </header>
+    <nav>
+        <li>Campeones</li>
+        <li>Notas de la Version</li>
+        <li>Info del Juego</li>
+    </nav>
+    <main>
+        <h1>LUCHADORES</h1>
+        <section>
+            <article>
+                <h2>Fiora</h2>
+                <img src="" alt="">
+            </article>
+            <article>
+                <h2>Aatrox</h2>
+                <img src="" alt="">
+            </article>
+            <article>
+                <h2>Irelia</h2>
+                <img src="" alt="">
+            </article>
+            <article>
+                <h2>Jayce</h2>
+                <img src="" alt="">
+            </article>
+            <article>
+                <h2>Darius</h2>
+                <img src="" alt="">
+            </article>
+        </section>
+    </main>
+    <aside>
+        <li>Luchadores</li>
+        <li>Asesinos</li>
+        <li>Magos</li>
+        <li>Tanques</li>
+        <li>Tiradores</li>
+    </aside>
+    <footer>
+        <p>Descargas</p>
+        <p>Soporte</p>
+        <p>Sobre nosotros</p>
+        <p>Estado del Servidor</p>
+    </footer>
 </body>
 </html>
